<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Triggercord</string>
    <string name="iso">ISO</string>
    <string name="pMode">P</string>
    <string name="svMode">Sv</string>
    <string name="avMode">Av</string>
    <string name="tvMode">Tv</string>
    <string name="tavMode">TAv</string>
    <string name="mMode">M</string>
    <string name="fover">f/</string>
    <string name="oneover">1/</string>
    <string name="ec">EC</string>
    <string name="latestPhoto">Latest Photo</string>
    <string name="loading">Loading&#8230;</string>
    <string name="shoot">Shoot</string>
    <string name="focus">Focus</string>
    <string name="meteringMode">Metering Mode</string>
    <string name="raw">RAW</string>
    <string name="rawplus">RAW+</string>
    <string name="rawOnly">RAW only</string>
    <string name="jpegOnly">JPEG only</string>
    <string name="buffer">Buffer</string>
    <string name="quality">Quality</string>
    <string name="jpegSharpness">Sharpness</string>
    <string name="jpegContrast">Contrast</string>
    <string name="jpegSaturation">Saturation</string>
    <string name="jpegHue">Hue</string>
    <string name="jpegQuality">Quality</string>
    <string name="mWBAdjustment">Magenta</string>
    <string name="gWBAdjustment">Green</string>
    <string name="bWBAdjustment">Blue</string>
    <string name="aWBAdjustment">Amber</string>
    <string name="flashEC">Flash Exposure\nCompensation</string>
    <string name="focusLinked">Focus on Trigger</string>
    <string name="focusNotLinked">Independant Focus</string>
    <string name="adjustmentsTitle">Adjustments</string>
    <string name="infoTitle">Info</string>
    <string name="helpTitle">Help</string>
    <string name="reconnectAction">Reconnect</string>
    <string name="shareAction">Share</string>
    <string name="deleteAction">Delete</string>
    <string name="helpPath">http://polymeris.github.com/triggercord/Manual</string>
    <string name="shareTitle">Share JPEG image with...</string>
</resources>
