<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Spinner
            android:id="@+id/MeteringModeSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/meteringMode"
            android:entries="@array/MeteringModeArray" />

        <Spinner
            android:id="@+id/DriveModeSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Spinner
            android:id="@+id/AutoFocusPointsSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/FlashModeSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </TableRow>

<!--
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:text="@string/quality"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RatingBar
            android:id="@+id/JpegQualitySpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:numStars="3"
            android:rating="3"
            android:stepSize="1" />

    </TableRow>
-->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ToggleButton
            android:id="@+id/RawToggle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/raw"
            android:textOff="@string/jpegOnly"
            android:textOn="@string/rawOnly" />

        <Spinner
            android:id="@+id/ResolutionSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </TableRow>

<!--
    <Spinner
        android:id="@+id/ImageModeSpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
-->

</TableLayout>
